0029252: Coding rules - eliminate GCC compiler warnings -Wformat-overflow

OSD_DirectoryIterator and OSD_FileIterator now uses TCollection_AsciiString instead of unsafe sprintf.